objects/Offered_Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountDescription__c</fullName>
        <description>Translates a discount configuration into a plain text description</description>
        <formula>IF(
  OR(
    OR(ISBLANK(Discount_Type__c),ISBLANK(Discount__c)),
    AND(UPPER(Discount_Type__c) == &apos;PERCENT&apos;,OR(ISBLANK(Unit__c),ISBLANK(Duration__c)))
  ),
  &apos;&apos;,
  CASE(UPPER(Discount_Type__c),
    &apos;PERCENT&apos;,
    TEXT(FLOOR(Discount__c)) + &apos;% discount for &apos;,
    &apos;FLAT&apos;,
    IF(
      ISBLANK(TEXT(CurrencyIsoCode)),
      &apos;&apos;,
      TEXT(CurrencyIsoCode) + &apos; &apos;
    ) + TEXT(Discount__c) + &apos; off for &apos;,
    &apos;&apos;
  ) +
  IF(
    OR(
     AND(Duration__c == 7300, UPPER(Unit__c) == &apos;DAY&apos;),
     AND(Duration__c == 7305, UPPER(Unit__c) == &apos;DAY&apos;),
     AND(Duration__c == 240, UPPER(Unit__c) == &apos;MONTH&apos;),
     AND(Duration__c == 20, UPPER(Unit__c) == &apos;YEAR&apos;)
    ),
    &apos;lifetime&apos;,
    IF(
      OR(
       AND(Duration__c == 365, UPPER(Unit__c) == &apos;DAY&apos;),
       AND(Duration__c == 12, UPPER(Unit__c) == &apos;MONTH&apos;)
      ),
      &apos;1 year&apos;,
      IF(
        NOT(OR(ISBLANK(Unit__c),ISBLANK(Duration__c))),
        TEXT(Duration__c) + &apos; &apos; + LOWER(Unit__c) + IF(
          Duration__c &gt; 1,
          &apos;s&apos;,
          &apos;&apos;
        ),
        &apos;&apos;
      )
    )
  )
)</formula>
        <label>Discount Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Product_Annual_Price__c</fullName>
        <label>Offer Product Annual Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Product_Monthly_Price__c</fullName>
        <label>Offer Product Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Products under this offer.</description>
        <label>Offer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Type__c</field>
                <operation>equals</operation>
                <value>Offer</value>
            </filterItems>
            <infoMessage>Only Offer Products.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Offered</relationshipLabel>
        <relationshipName>Products_Offered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Employee_Price__c</fullName>
        <label>Per Employee Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offered Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Under Offer</relationshipLabel>
        <relationshipName>Product_Under_Offer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Offer__c</columns>
        <columns>Product__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>Discount__c</columns>
        <columns>Duration__c</columns>
        <columns>Unit__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>